@@ -58,7 +58,8 @@ class ToDevice : public AnyDevice {
   unsigned long long _idle_calls;
   unsigned long long _idle_pulls;
   unsigned long long _busy_returns;
-  unsigned long long _pkts_sent;    
+  unsigned long long _pkts_sent;
+  unsigned long long _linux_pkts_sent;
   unsigned long long _time_pull;
   unsigned long long _time_clean;
   unsigned long long _time_queue;
